--- a/React_study/tmdb_final/package.json
+++ b/React_study/tmdb_final/package.json
@@ -15,15 +15,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
-    "start": "set PORT=3002 && react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
